[package]
name = "optimal-yahtzee-extreme"
version = "0.1.0"
authors = ["Jakob Naucke <jakob.naucke@web.de>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/jakobn-ai/optimal-yahtzee-extreme"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
cached = "0.26"
clap = { version = "2.33", features = ["yaml"] }
flate2 = "1.0"
float-cmp = "0.9"
linefeed = "0.6"
once_cell = "1.8"
rayon = "1.5"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.11"

# Use system zlib on
# - Android and iOS: provided by system and included in any toolchain (not yet tested)
# - s390x: use hardware acceleration (suspected, not tested)
[target.'cfg(any(android, ios, s390x))'.dependencies]
flate2 = { version = "1.0", features = ["zlib"] }

[profile.release]
lto = true

# TODO PGO
